fixed behind the dough grid

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 :root {
-
+  --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+--font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
+--font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
+--font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
+--font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+--font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
 }
 
 * {
@@ -97,9 +103,10 @@ main{
   .reviews{
     display: grid;
     grid-template-areas: 
-    "header-review header-review header-review"
+    "review1 review1 review1"
     "review1 review2 review3";
     grid-template-columns:1fr 1fr 1fr;
+    gap: 1em;
   
   }
 
@@ -123,9 +130,24 @@ main{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1em;
+    padding-bottom: 2em;
   }
 
   footer{
     text-align: center;
     padding-top: 2em;
   }
+
+  @media (min-width:360px){
+
+    header{
+      display: flex;
+      align-items: center;
+    }
+
+    header>ol{
+      display: flex;
+    }
+  }
+
+ 
